--- a/ConverterApp/WpfApp1/packages.config
+++ b/ConverterApp/WpfApp1/packages.config
@@ -2,12 +2,14 @@
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="Azure.Storage" version="0.1.3" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net472" />
-  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net472" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.4" targetFramework="net472" />
+  <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net472" />
+  <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net472" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="System.Spatial" version="5.6.4" targetFramework="net472" />
+  <package id="System.Spatial" version="5.8.4" targetFramework="net472" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
