--- a/UnitConverter/UnitConverter/UnitConverter.csproj
+++ b/UnitConverter/UnitConverter/UnitConverter.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ConversionTypes\Mass.cs" />
     <Compile Include="ConversionTypes\Length.cs" />
     <Compile Include="ConversionTypes\Temperature.cs" />
+    <Compile Include="Statistic.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -94,6 +95,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
