--- a/Converter/UnitConverter.Logic/App.config
+++ b/Converter/UnitConverter.Logic/App.config
@@ -18,8 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!-- add name="SQLuczelniany" connectionString="data source=nt-27\wwsi2014;initial catalog=KASETY_502_14;persist security info=True;user id=Z502_14;password=85135400;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /> -->
-    <add name="StatisticsModel" connectionString="data source=nt-27.wwsi.edu.pl\wwsi2014,1601;initial catalog=KASETY_502_03;persist security info=True;user id=Z502_03;password=02835067;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="StatisticsModel" connectionString="data source=.\sqlexpress;initial catalog=UnitsConverter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="StatisticsRepository" value="AzureStorage" />
